# Vault

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vault/: __init__.py  __main__.py  address_book.py  cli.py  config.py  erc4337.py  evm.py  http.py  journal.py  keystore.py  monitor.py  networks.py  output.py  policy.py  safe.py  service.py  signers.py  smart_accounts.py  themes.py  tui.py
tests/: test_cli.py
